--- a/scss/pages/_modedit.scss
+++ b/scss/pages/_modedit.scss
@@ -203,3 +203,12 @@ body[data-theme='cbe'][data-role='user']#page-mod-assign-grantextension {
     }
   }
 }
+
+body[data-theme='cbe'][data-role='user'] {
+  #create_file_nextcloud {
+    padding: 15px;
+    i.fa.fa-plus {
+      padding-right: 5px;
+    }
+  }
+}
