--- a/templates/pages/board_page.mustache
+++ b/templates/pages/board_page.mustache
@@ -114,8 +114,8 @@
                         <li class="select-module video">
                             {{# create.resources }}
                                 <li class="select-module">
-                                    <a href="{{ mod_url }}" class="create-mod">
-                                        <div class="mod-icon {{ modname }}"></div>
+                                    <a href="{{ mod_url }}" class="create-mod resource_mod">
+                                        <div class="mod-icon {{ modname }} resource_mod"></div>
                                         <div class="text">{{ modtitle }}</div>
                                     </a>
                                 </li>
