--- a/scss/pages/_resources.scss
+++ b/scss/pages/_resources.scss
@@ -41,11 +41,12 @@ body[data-theme='cbe'][data-role='user'] {
         align-items: center;
         justify-content: center;
         .icon {
-          background-color: $primary-color;
+          background-color: $grey-light;
           padding: 6px;
           height: 28px;
           width: 26px;
           margin: 0;
+          border-radius: 0px;
         }
         .name {
           text-align: center;
