--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -263,13 +263,22 @@ body[data-theme='cbe'][data-role="user"] {
     }
   }
 
-  .bd-deletemodule-modal {
+  .bd-deletemodule-modal,
+  .bd-deletecomment-modal,
+  .bd-editcomment-modal {
     .modal-comment {
       background-color: $grey-light;
       border-radius: 20px;
       padding: 20px;
       font-style: italic;
       text-align: left;
+    }
+    textarea.textcomment {
+      border: 1px solid #cacaca;
+      border-radius: 0;
+      margin: 10px;
+      padding: 10px;
+      width: 85%;
     }
   }
 
