--- a/templates/components/publication_comment_board_component.mustache
+++ b/templates/components/publication_comment_board_component.mustache
@@ -14,6 +14,24 @@
             <button data-toggle="modal" data-target=".bd-editcomment-modal-lg-{{ comment_id }}" class="edit-module action">
                 <i class="fa fa-pencil" aria-hidden="true"></i>
             </button>
+            <div data-region="modal-comment-edit" data-commentid="{{ comment_id }}" class="modal fade bd-editcomment-modal bd-editcomment-modal-lg-{{ comment_id }}" tabindex="-1" role="dialog" aria-labelledby="deleteCommentModalLabel-{{ comment_id }}" aria-hidden="true">
+                <div class="modal-dialog modal-lg cbe-modal">
+                    <div class="modal-content">
+                        <header>
+                            <h1>{{# str }} edit_comment, theme_cbe {{/ str }}</h1>
+                            <textarea class="textcomment" name="textarea" rows="10" cols="50">{{ textstript }}</textarea>
+                        </header>
+                        <footer class="modal-footer">
+                            <button class="btn cancel" data-dismiss="modal">{{# str }} cancel, theme_cbe {{/ str }}</button>
+                            <button class="btn btn-primary edit" data-action="edit-comment" >
+                                {{# str }} confirm, theme_cbe {{/ str }}
+                            </button>
+                        </footer>
+                    </div>
+                </div>
+            </div>
+        {{/ can_edit }}
+        {{# can_delete }}
             <button data-toggle="modal" data-target=".bd-deletecomment-modal-lg-{{ comment_id }}" class="edit-module action">
                 <i class="fa fa-trash-o" aria-hidden="true"></i>
             </button>
@@ -35,31 +53,17 @@
                     </div>
                 </div>
             </div>
-            <div data-region="modal-comment-edit" data-commentid="{{ comment_id }}" class="modal fade bd-editcomment-modal bd-editcomment-modal-lg-{{ comment_id }}" tabindex="-1" role="dialog" aria-labelledby="deleteCommentModalLabel-{{ comment_id }}" aria-hidden="true">
-                <div class="modal-dialog modal-lg cbe-modal">
-                    <div class="modal-content">
-                        <header>
-                            <h1>{{# str }} edit_comment, theme_cbe {{/ str }}</h1>
-                            <textarea class="textcomment" name="textarea" rows="10" cols="50">{{ textstript }}</textarea>
-                        </header>
-                        <footer class="modal-footer">
-                            <button class="btn cancel" data-dismiss="modal">{{# str }} cancel, theme_cbe {{/ str }}</button>
-                            <button class="btn btn-primary edit" data-action="edit-comment" >
-                                {{# str }} confirm, theme_cbe {{/ str }}
-                            </button>
-                        </footer>
-                    </div>
-                </div>
-            </div>
-        {{/ can_edit }}
+        {{/ can_delete }}
     </div>
 </li>
 
 {{#js}}
-    {{# can_edit }}
+    {{# can_delete }}
         require(['theme_cbe/comment_delete'], function(commentdelete) {
             commentdelete.initCommentDelete('[data-region="modal-comment-delete"][data-commentid="{{ comment_id }}"]', {{ comment_id }});
         });
+    {{/ can_delete }}
+    {{# can_edit }}
         require(['theme_cbe/comment_edit'], function(commentedit) {
             commentedit.initCommentEdit('[data-region="modal-comment-edit"][data-commentid="{{ comment_id }}"]', {{ comment_id }});
         });
