--- a/scss/pages/_resources.scss
+++ b/scss/pages/_resources.scss
@@ -41,7 +41,7 @@ body[data-theme='cbe'][data-role='user'] {
         align-items: center;
         justify-content: center;
         .icon {
-          background-color: $grey-light;
+          background-color: $grey-medium2;
           padding: 6px;
           height: 28px;
           width: 26px;
