fix js create course

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,5 +1,6 @@
 $primary-color: $primary;
 $primary-color-light: lighten( $primary, 15% );
+$primary-color-light2: lighten( $primary, 9% );
 $primary-color-hover: darken( $primary, 15% );
 $primary-color-hard: darken( $primary, 15% );
 $backboard-color: $backboard;
