--- a/scss/base/_icons.scss
+++ b/scss/base/_icons.scss
@@ -8,7 +8,7 @@ body[data-theme='cbe'] {
     &.modtype_page,
     &.modtype_resource {
       .activityinstance>a.aalink img.iconlarge.activityicon {
-        background-color: $primary-color-light !important;
+        background-color: $primary-color-light2 !important;
         border-radius: 20px !important;
         padding: 15px;
       }
