--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -141,7 +141,7 @@ body[data-theme='cbe'][data-role="user"] {
                   background-position: 50%;
                   border-radius: 15px;
                   &.resource_mod {
-                    background-color: $primary-color-light !important;
+                    background-color: $primary-color-light2 !important;
                     border-radius: 30px !important;
                   }
                   &.forum {
