fix js create course length

--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -310,6 +310,7 @@ body[data-theme='cbe'][data-role="user"] {
               }
               &.fa-times-circle-o {
                 color: red;
+                display: inline;
               }
             }
           }
