create file nextcloud

--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -19,6 +19,7 @@
 @import "components/message";
 @import "components/modassign";
 @import "components/assignsubmission_tipnc";
+@import "components/createfile_nextcloud";
 
 @import "layout/navbar";
 @import "layout/flatnav";
