--- a/templates/sections/course_left_section_menu_component.mustache
+++ b/templates/sections/course_left_section_menu_component.mustache
@@ -38,7 +38,7 @@
         {{# is_teacher }}
             <li class="link">
                 <a href="{{ links.groups }}">
-                    <i class="fa fa-users" aria-hidden="true"></i>
+                    <i class="fa fa-user-circle-o" aria-hidden="true"></i>
                     <span class="text">{{# str }} course_left_groups, theme_cbe {{/ str }}</span>
                 </a>
             </li>
