string create course

--- a/templates/modals/dashboard_createcourse.mustache
+++ b/templates/modals/dashboard_createcourse.mustache
@@ -2,7 +2,7 @@
     <div class="modal-dialog modal-lg cbe-modal">
         <div class="modal-content">
             <header>
-                <h1>Crear curso nuevo</h1>
+                <h1>{{# str }} createnewcourse {{/ str }}</h1>
                 <p></p>
             </header>
             <hr>
