create file in nextcloud iframe

--- a/templates/components/create_file_nextcloud.mustache
+++ b/templates/components/create_file_nextcloud.mustache
@@ -1,50 +1,18 @@
 <section id="create_file_nextcloud" class="dropdown">
-    <button data-action="create_file_nextcloud" class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <button data-action="create_file_nextcloud" class="btn btn-primary dropdown-toggle nextcloud-create-file" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <i class="fa fa-plus" aria-hidden="true"></i>
         <span>{{# str }} nc_createfile_nc, theme_cbe {{/ str }}</span>
     </button>
-    <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-        <button data-action="word" class="dropdown-item" type="button"><i class="fa fa-file-word-o" aria-hidden="true"></i> {{# str }} nc_createfile_word, theme_cbe {{/ str }}</button>
-        <button data-action="excel" class="dropdown-item" type="button"><i class="fa fa-file-excel-o" aria-hidden="true"></i> {{# str }} nc_createfile_excel, theme_cbe {{/ str }}</button>
-        <button data-action="pp" class="dropdown-item" type="button"><i class="fa fa-file-powerpoint-o" aria-hidden="true"></i> {{# str }} nc_createfile_pp, theme_cbe {{/ str }}</button>
-        <button data-action="feedback" class="dropdown-item" type="button"><i class="fa fa-bar-chart" aria-hidden="true"></i> {{# str }} nc_createfile_feedback, theme_cbe {{/ str }}</button>
-        <button data-action="form" class="dropdown-item" type="button"><i class="fa fa-check-square-o" aria-hidden="true"></i> {{# str }} nc_createfile_form, theme_cbe {{/ str }}</button>
-    </div>
-
-    <!-- Modal Success -->
-    <div class="modal fade" id="fileNcSuccessModalCenter" tabindex="-1" role="dialog" aria-labelledby="fileNcSuccessModalCenter" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <div class="iconinfo">
-                        <i class="fa fa-check" aria-hidden="true"></i>
-                    </div>
-                    <h3 class="filenctitle">{{# str }} title_success_filecreate, theme_cbe {{/ str }}</h3>
-                    <p class="filencinfo">{{# str }} notice_filecreate, theme_cbe, <a id="urlnextcloudsuccess" href="#">link</a> {{/ str }}</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">{{# str }} ok {{/ str }}</button>
-                </div>
-            </div>
+    <button data-action="create_file_nextcloud_contract" class="btn btn-primary nextcloud-create-file-contract" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <i class="fa fa-caret-up" aria-hidden="true"></i>
+    </button>
+    <div id="create_file_nextcloud_body">
+        <div class="notice_nc">
+            <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+            <span class="notice_nextcloud_create">{{# str }} notice_filecreate, theme_cbe {{/ str }}</span>
         </div>
-    </div>
-
-    <!-- Modal Error -->
-    <div class="modal fade" id="fileNcErrorModalCenter" tabindex="-1" role="dialog" aria-labelledby="fileNcErrorModalCenter" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <div class="iconinfo">
-                        <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-                    </div>
-                    <h3 class="filenctitle">{{# str }} title_error_filecreate, theme_cbe {{/ str }}</h3>
-                    <p class="filencinfo">{{# str }} notice_error_filecreate, theme_cbe, <a id="urlnextclouderror" href="#">link</a> {{/ str }}</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">{{# str }} ok {{/ str }}</button>
-                </div>
-            </div>
-        </div>
+        <div id="nextcloud_error"></div>
+        <iframe id="create_file_nextcloud_iframe" class='tipnc-iframe' src="" width="100%" height="600px" align="top" frameborder="0"></iframe>
     </div>
 </section>
 
