--- a/scss/components/_createfile_nextcloud.scss
+++ b/scss/components/_createfile_nextcloud.scss
@@ -4,45 +4,35 @@ body[data-theme='cbe'][data-role='user'] {
     i.fa.fa-plus {
       padding-right: 5px;
     }
-    .notice-filenc {
-      color: grey;
-      font-style: italic;
-      font-size: 10px;
-      padding: 0 8px;
-      i.fa.fa-exclamation-triangle {
-        color: #ffc107;
-      }
+    .nextcloud-create-file {
+      margin-bottom: 10px;
     }
-    .modal-body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      h3.filenctitle {
-        font-weight: bolder;
-        font-size: 21px;
-        margin-bottom: 20px;
-      }
-      p.filencinfo {
-        padding: 10px 10px 0;
-      }
-      .iconinfo {
-        margin: 10px 0 20px;
-        i.fa {
-        font-size: 46px;
-        background-color: #e4e4e4;
-        border-radius: 52px;
-        padding: 10px;
-        &.fa-check {
-          color: #51bd51;
+    .nextcloud-create-file-contract {
+      display: none;
+      margin-bottom: 10px;
+    }
+    #create_file_nextcloud_body {
+      display: none;
+      .notice_nc {
+        margin-bottom: 10px;
+        i.fa.fa-exclamation-triangle {
+          color: #ff9e00;
         }
-        &.fa-exclamation-triangle {
-          color: #df0839;
-          padding: 16px;
-          font-size: 44px;
+        span.notice_nextcloud_create {
+          font-size: 12px;
+          color: grey;
         }
       }
+      #create_file_nextcloud_iframe {
+        display: none;
       }
-
+      div#nextcloud_error {
+        background-color: #dddddd;
+        padding: 20px;
+        text-align: center;
+        font-weight: bold;
+        font-size: 14px;
+      }
     }
   }
 
