--- a/templates/components/create_file_nextcloud.mustache
+++ b/templates/components/create_file_nextcloud.mustache
@@ -12,6 +12,7 @@
             <span class="notice_nextcloud_create">{{# str }} notice_filecreate, theme_cbe {{/ str }}</span>
         </div>
         <div id="nextcloud_error"></div>
+        <div class="hide_header"></div>
         <iframe id="create_file_nextcloud_iframe" class='tipnc-iframe' src="" width="100%" height="600px" align="top" frameborder="0"></iframe>
     </div>
 </section>
